--- a/08 - Backend/02 - Criando uma aplicação Node/api/package.json
+++ b/08 - Backend/02 - Criando uma aplicação Node/api/package.json
@@ -10,7 +10,8 @@
   "license": "ISC",
   "description": "API desenvolvida no projeto explorer",
   "dependencies": {
-    "express": "^4.21.1"
+    "express": "^4.21.1",
+    "express-async-errors": "^3.1.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.7"
